# foreflight-dashboard

./: .coveragerc  .cursor  .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.local  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  app.py  cookies.txt  create_test_accounts.py  deployment-local.yaml  deployment.yaml  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  env.production.example  extract_logbook_from_images.py  foreflight-logbook.service  foreflight_logbook.csv  headers.txt  kubernetes-README.md  logbook_2025-09-13_03_04_50.csv  pyproject.toml  pytest.ini  railway.json  requirements.txt  requirements.txt.backup  run.sh  run_tests.py  safety-report.json  test-accounts.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.do/: app.yaml
.github/: renovate.json
.github/workflows/: ci.yml  codeql.yml  dependency-updates.yml  docs.yml  release.yml
frontend/: .eslintrc.cjs  index.html  npm-audit.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: DashboardContent.tsx  Layout.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useAuthStore.ts
frontend/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  (+4 more)
src/: __init__.py  app.py  cli.py  config.py  db.py  foreflight_client.py  importer.py  init_db.py  main.py  models.py  validate_csv.py
src/api/: routes.py
src/cli/: account_commands.py
src/core/: account_manager.py  auth.py  auth_models.py  database.py  icao_validator.py  models.py  security.py  user_models.py  validation.py
src/services/: foreflight_client.py  importer.py
src/static/: mvc-table.js  style-badges.css  summary-table.css
src/templates/: base.html  index.html  mvc-table.js  react_index.html
static/: index.html  style.css
templates/: index.html
tests/: README.md  conftest.py
tests/test_api/: test_authentication.py  test_fastapi_endpoints.py  test_flask_routes.py
tests/test_core/: test_icao_validator_extended.py  test_models.py  test_models_coverage.py  test_validation.py  test_validation_extended.py
tests/test_fastapi/: __init__.py  test_api.py  test_auth.py  test_auth_endpoints.py  test_endorsement_endpoints.py  test_integration.py  test_logbook_endpoints.py  test_main_coverage.py  test_simple_integration.py  test_system_endpoints.py  test_user_endpoints.py
tests/test_integration/: test_end_to_end.py
tests/test_services/: test_foreflight_client.py  test_importer.py
(+8 files in other folders)
